# ros2_notes

./: .gitignore  README.md  Task1_Notes.md
install/: local_setup.sh  setup.sh
install/number_square_cpp/lib/number_square_cpp/: number_publisher  square_subscriber
install/number_square_cpp/share/number_square_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/number_square_cpp/share/number_square_cpp/cmake/: number_square_cppConfig.cmake
install/number_square_py/lib/number_square_py/: number_publisher  square_subscriber
install/number_square_py/share/number_square_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/number_square_cpp/: CMakeLists.txt  package.xml
src/number_square_cpp/launch/: number_square.launch.xml
src/number_square_cpp/src/: number_publisher.cpp  square_subscriber.cpp
src/number_square_py/: setup.cfg  setup.py
src/number_square_py/launch/: number_square.launch.py
src/number_square_py/number_square_py/: number_publisher.py  square_subscriber.py
src/robo_cpp/: CMakeLists.txt  package.xml
src/robo_cpp/launch/: detection.launch.py  spawn.launch.py  teleop.launch.py
src/robo_cpp/rviz/: detect_config.rviz  view_config.rviz
src/robo_cpp/src/: image_subscriber.cpp  lidar_subscriber.cpp  navigate_node.cpp
src/robo_cpp/urdf/: robo_cpp.urdf.xacro
src/robo_cpp/worlds/: obstacle_world.sdf  wall_world.world
